--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-##theme: jekyll-theme-leap-day
+theme: jekyll-theme-leap-day
 # Hexo Configuration
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
