--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Hexo Configuration
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
-
+<body bgcolor="#cccccc">
 # Site
 title: My Blog
 subtitle: ''
