--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@
 
 # Site
 title: My Blog
-subtitle: ''
-description: ''
+subtitle: Welcome!
+description: 優質好文
 keywords:
-author: Hans
+author: 
 language: zh-TW
 timezone: ''
 <body bgcolor="#cccccc">
